# sdk-python

./: README.md  pyproject.toml
predictorsdk/: __init__.py  client.py  environment.py  raw_client.py  reference.md
predictorsdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
predictorsdk/errors/: __init__.py  bad_gateway_error.py
predictorsdk/tests/: test_aiohttp_autodetect.py
predictorsdk/types/: __init__.py  crypto_price_item.py  crypto_prices_response.py  error_response.py  markets_list_response.py  pagination_block.py  payment_required_error_action.py  payment_required_error_body.py  platform_market.py  platform_market_platform.py  sports_matching_response.py  unified_market.py  unified_market_provider.py
