[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictorsdk"
version = "0.0.1"
description = "The official Python client for the PredictorSDK matching markets API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "PredictorSDK", email = "nick@predictorsdk.com" }]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://docs.predictorsdk.com"
Repository = "https://github.com/PredictorSDK/sdk-python"
Issues = "https://github.com/PredictorSDK/sdk-python/issues"

[tool.setuptools.packages.find]
include = ["predictorsdk*"]
