[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictorsdk"
version = "0.2.0"
description = "The official Python client for the PredictorSDK matching markets API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "PredictorSDK", email = "nick@predictorsdk.com" }]
keywords = ["predictorsdk", "sports", "betting", "prediction-markets", "kalshi", "polymarket", "sdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://docs.predictorsdk.com"
Repository = "https://github.com/PredictorSDK/sdk-python"
Issues = "https://github.com/PredictorSDK/sdk-python/issues"

[tool.setuptools.package-data]
predictorsdk = ["py.typed"]

[tool.setuptools.packages.find]
include = ["predictorsdk*"]
